--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <poi.version>3.15</poi.version>
         <xmlbeans.version>2.6.0</xmlbeans.version>
         <commons-collections4.version>4.1</commons-collections4.version>
+        <xlsx-streamer.version>1.1.0</xlsx-streamer.version>
         <mainClass>com.bmc.event.EventIngestion</mainClass>
 
   </properties>
@@ -95,6 +96,11 @@
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-collections4</artifactId>
        <version>${commons-collections4.version}</version>
+    </dependency>
+    <dependency>
+       <groupId>com.monitorjbl</groupId>
+       <artifactId>xlsx-streamer</artifactId>
+       <version>${xlsx-streamer.version}</version>
     </dependency>
   </dependencies>
   
