--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
        <artifactId>xlsx-streamer</artifactId>
        <version>${xlsx-streamer.version}</version>
     </dependency>
+    <dependency>
+       <groupId>joda-time</groupId>
+       <artifactId>joda-time</artifactId>
+       <version>2.9.9</version>
+    </dependency>
   </dependencies>
   
   <build>
