--- a/pom.xml
+++ b/pom.xml
@@ -1,154 +1,154 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.bmc.event</groupId>
-  <artifactId>event-ingestion-client</artifactId>
-  <version>1.0</version>
-  <packaging>jar</packaging>
-  <url>http://maven.apache.org</url>
-  <name>event-ingestion-client</name>
+   <modelVersion>4.0.0</modelVersion>
+   <groupId>com.bmc.event</groupId>
+   <artifactId>event-ingestion-client</artifactId>
+   <version>1.0</version>
+   <packaging>jar</packaging>
+   <url>http://maven.apache.org</url>
+   <name>event-ingestion-client</name>
+   
+   <properties>
+       <maven.compiler.version>3.3</maven.compiler.version>
+       <compile.source.version>1.8</compile.source.version>
+       <compile.target.version>1.8</compile.target.version>
+       <jackson.version>2.6.2</jackson.version>
+       <maven.jar.version>2.6</maven.jar.version>
+       <maven.shade.version>2.4.1</maven.shade.version>
+       <guava.version>20.0</guava.version>
+       <resteasy.version>3.0.14.Final</resteasy.version>
+       <slf4j.version>1.7.10</slf4j.version>
+       <log4j.version>1.2.17</log4j.version>
+       <poi.version>3.15</poi.version>
+       <xmlbeans.version>2.6.0</xmlbeans.version>
+       <commons-collections4.version>4.1</commons-collections4.version>
+       <xlsx-streamer.version>1.1.0</xlsx-streamer.version>
+       <joda-time.version>2.9.9</joda-time.version>
+       <mainClass>com.bmc.event.EventIngestion</mainClass>
+   </properties>
   
-  <properties>
-		<maven.compiler.version>3.3</maven.compiler.version>
-        <compile.source.version>1.8</compile.source.version>
-		<compile.target.version>1.8</compile.target.version>
-		<jackson.version>2.6.2</jackson.version>
-		<maven.jar.version>2.6</maven.jar.version>
-		<maven.shade.version>2.4.1</maven.shade.version>
-		<guava.version>20.0</guava.version>
-		<resteasy.version>3.0.14.Final</resteasy.version>
-		<slf4j.version>1.7.10</slf4j.version>
-        <log4j.version>1.2.17</log4j.version>
-        <poi.version>3.15</poi.version>
-        <xmlbeans.version>2.6.0</xmlbeans.version>
-        <commons-collections4.version>4.1</commons-collections4.version>
-        <xlsx-streamer.version>1.1.0</xlsx-streamer.version>
-        <mainClass>com.bmc.event.EventIngestion</mainClass>
-
-  </properties>
+   <dependencies>
+       <dependency>
+           <groupId>com.google.guava</groupId>
+           <artifactId>guava</artifactId>
+           <version>${guava.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>com.fasterxml.jackson.core</groupId>
+           <artifactId>jackson-core</artifactId>
+           <version>${jackson.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>com.fasterxml.jackson.core</groupId>
+           <artifactId>jackson-databind</artifactId>
+           <version>${jackson.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>org.jboss.resteasy</groupId>
+           <artifactId>resteasy-client</artifactId>
+           <version>${resteasy.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>org.slf4j</groupId>
+           <artifactId>slf4j-api</artifactId>
+           <version>${slf4j.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>org.slf4j</groupId>
+           <artifactId>slf4j-log4j12</artifactId>
+           <version>${slf4j.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>log4j</groupId>
+           <artifactId>log4j</artifactId>
+           <version>${log4j.version}</version>
+           <exclusions>
+               <exclusion>
+                   <groupId>com.sun.jdmk</groupId>
+                   <artifactId>jmxtools</artifactId>
+               </exclusion>
+               <exclusion>
+                   <groupId>com.sun.jmx</groupId>
+                   <artifactId>jmxri</artifactId>
+               </exclusion>
+           </exclusions>
+       </dependency>
+       <dependency>
+           <groupId>org.apache.poi</groupId>
+           <artifactId>poi</artifactId>
+           <version>${poi.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>org.apache.poi</groupId>
+           <artifactId>poi-ooxml</artifactId>
+           <version>${poi.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>org.apache.poi</groupId>
+           <artifactId>poi-ooxml-schemas</artifactId>
+           <version>${poi.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>org.apache.xmlbeans</groupId>
+           <artifactId>xmlbeans</artifactId>
+           <version>${xmlbeans.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>org.apache.commons</groupId>
+           <artifactId>commons-collections4</artifactId>
+           <version>${commons-collections4.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>com.monitorjbl</groupId>
+           <artifactId>xlsx-streamer</artifactId>
+           <version>${xlsx-streamer.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>joda-time</groupId>
+           <artifactId>joda-time</artifactId>
+           <version>${joda-time.version}</version>
+       </dependency>
+   </dependencies>
   
-  <dependencies>
-    <dependency>
-       <groupId>com.google.guava</groupId>
-       <artifactId>guava</artifactId>
-       <version>${guava.version}</version>
-    </dependency>
-    <dependency>
-		<groupId>com.fasterxml.jackson.core</groupId>
-		<artifactId>jackson-core</artifactId>
-		<version>${jackson.version}</version>
-	</dependency>
-    <dependency>
-		<groupId>com.fasterxml.jackson.core</groupId>
-		<artifactId>jackson-databind</artifactId>
-		<version>${jackson.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.jboss.resteasy</groupId>
-		<artifactId>resteasy-client</artifactId>
-		<version>${resteasy.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.slf4j</groupId>
-		<artifactId>slf4j-api</artifactId>
-		<version>${slf4j.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.slf4j</groupId>
-		<artifactId>slf4j-log4j12</artifactId>
-		<version>${slf4j.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>log4j</groupId>
-		<artifactId>log4j</artifactId>
-		<version>${log4j.version}</version>
-		<exclusions>
-			<exclusion>
-				<groupId>com.sun.jdmk</groupId>
-				<artifactId>jmxtools</artifactId>
-			</exclusion>
-			<exclusion>
-				<groupId>com.sun.jmx</groupId>
-				<artifactId>jmxri</artifactId>
-			</exclusion>
-		</exclusions>
-	</dependency>
-	<dependency>
-       <groupId>org.apache.poi</groupId>
-       <artifactId>poi</artifactId>
-       <version>${poi.version}</version>
-    </dependency>
-    <dependency>
-       <groupId>org.apache.poi</groupId>
-       <artifactId>poi-ooxml</artifactId>
-       <version>${poi.version}</version>
-    </dependency>
-    <dependency>
-       <groupId>org.apache.poi</groupId>
-       <artifactId>poi-ooxml-schemas</artifactId>
-       <version>${poi.version}</version>
-    </dependency>
-    <dependency>
-       <groupId>org.apache.xmlbeans</groupId>
-       <artifactId>xmlbeans</artifactId>
-       <version>${xmlbeans.version}</version>
-    </dependency>
-    <dependency>
-       <groupId>org.apache.commons</groupId>
-       <artifactId>commons-collections4</artifactId>
-       <version>${commons-collections4.version}</version>
-    </dependency>
-    <dependency>
-       <groupId>com.monitorjbl</groupId>
-       <artifactId>xlsx-streamer</artifactId>
-       <version>${xlsx-streamer.version}</version>
-    </dependency>
-    <dependency>
-       <groupId>joda-time</groupId>
-       <artifactId>joda-time</artifactId>
-       <version>2.9.9</version>
-    </dependency>
-  </dependencies>
-  
-  <build>
-      <finalName>event-ingestion-client</finalName>
-	  <plugins>
-	  	  <!-- The Compiler Plugin is used to compile the sources of your project. -->
-	  	  <plugin>
-	  	  	<groupId>org.apache.maven.plugins</groupId>
-	  	  	<artifactId>maven-compiler-plugin</artifactId>
-	  	  	<version>${maven.compiler.version}</version>
-	  	  	<configuration>
-	  	  		<source>${compile.source.version}</source>
-	  	  		<target>${compile.target.version}</target>
-	  	  	</configuration>
-	  	  </plugin>
-	  	  <plugin>
-	  	  	<groupId>org.apache.maven.plugins</groupId>
-	  	  	<artifactId>maven-jar-plugin</artifactId>
-	  	  	<version>${maven.jar.version}</version>
-	  	  </plugin>
-	  	  <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-shade-plugin</artifactId>
-              <version>${maven.shade.version}</version>
-              <executions>
-                  <execution>
-                      <phase>package</phase>
-                      <goals>
-                          <goal>shade</goal>
-                      </goals>
-                      <configuration>
-                          <transformers>
-                              <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                              <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                  <mainClass>${mainClass}</mainClass>
-                              </transformer>
-                          </transformers>
-                      </configuration>
-                  </execution>
-              </executions>
-          </plugin>
-	  </plugins>
-	</build>
+    <build>
+        <finalName>event-ingestion-client</finalName>
+        <plugins>
+            <!-- The Compiler Plugin is used to compile the sources of your project. -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.version}</version>
+                <configuration>
+                    <source>${compile.source.version}</source>
+                    <target>${compile.target.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>${maven.jar.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>${maven.shade.version}</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>${mainClass}</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
   
 </project>
